Bug 124305 - Multi-selection lost after promote/demote chapter/level in Navigator
Summary: Multi-selection lost after promote/demote chapter/level in Navigator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.2.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2019-03-24 08:49 UTC by Jim Raykowski
Modified: 2019-08-15 13:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
headings file (22.81 KB, application/vnd.oasis.opendocument.text)
2019-03-24 08:49 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-03-24 08:49:45 UTC
Created attachment 150248 [details]
headings file

IMHO an enhancement to the Navigator would be for multi-selected outline headings to remain selected after promote/demote of chapter/level so re-selection is not required when more than one promote/demote is needed for the selected headings.

Steps to reproduce lost multi-selection:

1. Open the attached headings document or create a document with several headings
2. Open Navigator floating window (F5) or the Navigator deck/panel in the Sidebar
3. Toggle to Headings root content mode with the 'Content Navigation View' button on the second row at the start of the second line in the tool box above the content tree list box.
5. Select multiple headings with ctrl + mouse clicks or shift + mouse clicks.
6. Click on a promote/demote chapter/level tool button

Results: multi-selection is lost after promote/demote of chapter/level

Expected results: multi-selection remains after promote/demote of chapter/level
Comment 1 Dieter 2019-03-24 12:14:23 UTC
I confirm it with

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded

and with

Version: 6.2.2.2 (x64)
Build-ID: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 2 Jim Raykowski 2019-03-24 21:59:50 UTC
A patch for this is here:
https://gerrit.libreoffice.org/#/c/69602/

Testing/review/comments always appreciated.
Comment 3 Buovjaga 2019-03-28 08:27:52 UTC
I confirm the multi-selection is kept. I tried demote and noticed some of the headings went into a collapsed state and others into an expanded state. Maybe they should all be shown as expanded?
Comment 4 Jim Raykowski 2019-05-03 07:41:24 UTC
(In reply to Buovjaga from comment #3)
> I confirm the multi-selection is kept. I tried demote and noticed some of
> the headings went into a collapsed state and others into an expanded state.
> Maybe they should all be shown as expanded?

Hi Buovjaga,

There is a bug with moving multi selected headings that may be causing the collapsing and expanding. Try applying the patch for bug 124895 along with this patch to see if you have more favorable results.
Comment 5 Buovjaga 2019-05-23 14:56:32 UTC
(In reply to Jim Raykowski from comment #4)
> (In reply to Buovjaga from comment #3)
> > I confirm the multi-selection is kept. I tried demote and noticed some of
> > the headings went into a collapsed state and others into an expanded state.
> > Maybe they should all be shown as expanded?
> 
> Hi Buovjaga,
> 
> There is a bug with moving multi selected headings that may be causing the
> collapsing and expanding. Try applying the patch for bug 124895 along with
> this patch to see if you have more favorable results.

I now tried with the patches and after "Demote level" I see all in expanded state! Looks good and consistent now.
Comment 6 Commit Notification 2019-05-24 11:11:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/360b9d52e9d0e7e70ad8432802886073bbd6ee3d%5E%21

tdf#124305 Make multiselected outline moves keep selections

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2019-07-25 06:46:21 UTC
Verified with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 8f98a7c4e5b1f0b249c026577805a378b8a533d5
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-23_00:30:19
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Jim, thanks for fixing it.