tdf#124305 Make multiselected outline moves keep selections

Change-Id: Ic89a07a6ac3103da77fae8d28f4295fd17c35f89